[gd_scene load_steps=47 format=2]

[ext_resource path="res://assets/collectables.gd" type="Script" id=1]
[ext_resource path="res://glowTexture.png" type="Texture" id=2]
[ext_resource path="res://assets/heartSpriteAnim/0001.png" type="Texture" id=3]
[ext_resource path="res://assets/heartSpriteAnim/0002.png" type="Texture" id=4]
[ext_resource path="res://assets/heartSpriteAnim/0003.png" type="Texture" id=5]
[ext_resource path="res://assets/heartSpriteAnim/0004.png" type="Texture" id=6]
[ext_resource path="res://assets/heartSpriteAnim/0005.png" type="Texture" id=7]
[ext_resource path="res://assets/heartSpriteAnim/0006.png" type="Texture" id=8]
[ext_resource path="res://assets/heartSpriteAnim/0007.png" type="Texture" id=9]
[ext_resource path="res://assets/heartSpriteAnim/0008.png" type="Texture" id=10]
[ext_resource path="res://assets/heartSpriteAnim/0009.png" type="Texture" id=11]
[ext_resource path="res://assets/heartSpriteAnim/0010.png" type="Texture" id=12]
[ext_resource path="res://assets/heartSpriteAnim/0011.png" type="Texture" id=13]
[ext_resource path="res://assets/heartSpriteAnim/0012.png" type="Texture" id=14]
[ext_resource path="res://assets/onCollectParticles.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/meatSpriteAnim/0001.png" type="Texture" id=16]
[ext_resource path="res://assets/meatSpriteAnim/0002.png" type="Texture" id=17]
[ext_resource path="res://assets/meatSpriteAnim/0003.png" type="Texture" id=18]
[ext_resource path="res://assets/meatSpriteAnim/0004.png" type="Texture" id=19]
[ext_resource path="res://assets/meatSpriteAnim/0005.png" type="Texture" id=20]
[ext_resource path="res://assets/meatSpriteAnim/0006.png" type="Texture" id=21]
[ext_resource path="res://assets/meatSpriteAnim/0007.png" type="Texture" id=22]
[ext_resource path="res://assets/meatSpriteAnim/0008.png" type="Texture" id=23]
[ext_resource path="res://assets/meatSpriteAnim/0009.png" type="Texture" id=24]
[ext_resource path="res://assets/meatSpriteAnim/0010.png" type="Texture" id=25]
[ext_resource path="res://assets/meatSpriteAnim/0011.png" type="Texture" id=26]
[ext_resource path="res://assets/meatSpriteAnim/0012.png" type="Texture" id=27]
[ext_resource path="res://assets/meatSpriteAnim/0013.png" type="Texture" id=28]
[ext_resource path="res://assets/meatSpriteAnim/0014.png" type="Texture" id=29]
[ext_resource path="res://assets/meatSpriteAnim/0015.png" type="Texture" id=30]
[ext_resource path="res://assets/meatSpriteAnim/0016.png" type="Texture" id=31]
[ext_resource path="res://assets/meatSpriteAnim/0017.png" type="Texture" id=32]
[ext_resource path="res://assets/meatSpriteAnim/0018.png" type="Texture" id=33]
[ext_resource path="res://assets/meatSpriteAnim/0019.png" type="Texture" id=34]
[ext_resource path="res://assets/meatSpriteAnim/0020.png" type="Texture" id=35]
[ext_resource path="res://assets/meatSpriteAnim/0021.png" type="Texture" id=36]
[ext_resource path="res://assets/meatSpriteAnim/0022.png" type="Texture" id=37]
[ext_resource path="res://Badges.tscn" type="PackedScene" id=38]
[ext_resource path="res://sounds/jump.ogg" type="AudioStream" id=39]
[ext_resource path="res://assets/AudioStreamPlayer.gd" type="Script" id=40]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="Animation" id=6]

length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5 ),
"transitions": PoolRealArray( 0.560243, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 10 ) ]
}

[node name="collectable" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Material" ]

[node name="spriteNode" type="Node2D" parent="."]

position = Vector2( 0, 2.48 )
_sections_unfolded = [ "Material", "Transform" ]

[node name="glowSprite" type="Sprite" parent="spriteNode"]

modulate = Color( 1, 0.929688, 0.929688, 1 )
show_behind_parent = true
material = SubResource( 1 )
position = Vector2( -0.0534515, -0.892603 )
scale = Vector2( 0.474787, 0.474787 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Animation", "Material", "Visibility" ]

[node name="heartArea" type="Area2D" parent="spriteNode"]

editor/display_folded = true
visible = false
scale = Vector2( 0.356363, 0.356363 )
z_as_relative = false
input_pickable = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 524288
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Material", "Pause", "Pickable", "Transform", "Visibility", "Z" ]

[node name="collectableShape" type="CollisionShape2D" parent="spriteNode/heartArea"]

position = Vector2( 0, 5 )
scale = Vector2( 3.84615, 4.23077 )
shape = SubResource( 2 )
disabled = true
_sections_unfolded = [ "Material" ]

[node name="AnimatedSprite" type="AnimatedSprite" parent="spriteNode/heartArea"]

editor/display_folded = true
modulate = Color( 1, 0.300781, 0.300781, 1 )
use_parent_material = true
frames = SubResource( 3 )
animation = "default"
frame = 9
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]

[node name="onCollectParticles" parent="spriteNode/heartArea/AnimatedSprite" instance=ExtResource( 15 )]

[node name="meatArea" type="Area2D" parent="spriteNode"]

editor/display_folded = true
visible = false
scale = Vector2( 0.507725, 0.507725 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 524288
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Material", "Transform" ]

[node name="collectableShape" type="CollisionShape2D" parent="spriteNode/meatArea"]

scale = Vector2( 2.94929, 2.94929 )
shape = SubResource( 4 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="spriteNode/meatArea"]

frames = SubResource( 5 )
animation = "default"
frame = 14
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]

[node name="onCollectParticles" parent="spriteNode/meatArea/AnimatedSprite" instance=ExtResource( 15 )]

[node name="badgeArea" type="Area2D" parent="spriteNode"]

visible = false
scale = Vector2( 0.507725, 0.507725 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 524288
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Material", "Transform" ]

[node name="collectableShape" type="CollisionShape2D" parent="spriteNode/badgeArea"]

scale = Vector2( 2.94929, 2.94929 )
shape = SubResource( 4 )
disabled = true

[node name="Badges" parent="spriteNode/badgeArea" instance=ExtResource( 38 )]

[node name="AnimatedSprite" type="AnimatedSprite" parent="spriteNode/badgeArea"]

editor/display_folded = true
visible = false
frames = SubResource( 5 )
animation = "default"
frame = 14
playing = true
_sections_unfolded = [ "Material", "Transform", "Visibility", "Z" ]

[node name="onCollectParticles" parent="spriteNode/badgeArea/AnimatedSprite" instance=ExtResource( 15 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="spriteNode"]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/collectablesSwing = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "collectablesSwing"

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="spriteNode"]

scale = Vector2( 0.356363, 0.356363 )
rect = Rect2( -10, -10, 20, 20 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

stream = ExtResource( 39 )
volume_db = -80.0
autoplay = false
mix_target = 0
bus = "Effects"
script = ExtResource( 40 )

[connection signal="body_entered" from="spriteNode/heartArea" to="." method="_on_heartArea_body_entered"]

[connection signal="body_entered" from="spriteNode/meatArea" to="." method="_on_meatArea_body_entered"]

[connection signal="body_entered" from="spriteNode/badgeArea" to="." method="_on_badgeArea_body_entered"]

[connection signal="screen_exited" from="spriteNode/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]


